# lost-item-api

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  run_test.bat  start_server.bat  start_server.ps1  test_embedding.py
.github/workflows/: deploy.yml
app/: config.py  main.py
app/agent/: agent.py  prompts.py
app/api/: deps.py
app/api/routes/: health.py  images.py  ingest.py  mongo_ingest.py  search.py
app/models/: ingest.py  mongo_item.py  police_api.py  search.py
app/services/: embedding.py  ingest.py  mongo_client.py  mongo_ingest.py  police_client.py  search_session.py  vector_store.py
scripts/: init_qdrant.py
tests/: test_search_session.py
